RESOLVED FIXED243943
REGRESSION(252611@main): /upgrade-insecure-requests/gen/top.meta/unset/xhr.https.html
https://bugs.webkit.org/show_bug.cgi?id=243943
Summary REGRESSION(252611@main): /upgrade-insecure-requests/gen/top.meta/unset/xhr.ht...
Sam Sneddon [:gsnedders]
Reported 2022-08-15 09:44:36 PDT
This regressed, in full: /mixed-content/gen/top.http-rp/opt-in/xhr.https.html /upgrade-insecure-requests/gen/top.meta/unset/xhr.https.html /xhr/open-url-multi-window-4.htm The last of these fails in all browsers, so I presume the test is wrong. The others, however, pass elsewhere: https://wpt.fyi/results/?label=master&label=experimental&product=safari-150%20preview&product=safari-151%20preview&product=chrome&product=firefox&view=subtest&q=%2Fmixed-content%2Fgen%2Ftop.http-rp%2Fopt-in%2Fxhr.https.html%20or%20%2Fupgrade-insecure-requests%2Fgen%2Ftop.meta%2Funset%2Fxhr.https.html%20or%20%2Fxhr%2Fopen-url-multi-window-4.htm
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-15 09:44:59 PDT
Chris Dumez
Comment 2 2022-08-15 12:02:23 PDT
EWS
Comment 3 2022-08-17 08:22:31 PDT
Committed 253520@main (7f6856adb360): <https://commits.webkit.org/253520@main> Reviewed commits have been landed. Closing PR #3316 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.