REGRESSION(252611@main): /upgrade-insecure-requests/gen/top.meta/unset/xhr.https.html https://bugs.webkit.org/show_bug.cgi?id=243943 <rdar://98674049>

Reviewed by Darin Adler.

After 252611@main, XMLHttpRequest behaves differently (fires different events)
on load failure, depending on whether or not the error is a cancellation.

When a redirect is blocked, we were incorrectly failing the load with a
cancellation error, even though this was not a true cancellation. To address
the issue, we now use an AccessControl error as this is what we normally use
when loads are blocked.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/mixed-content/gen/top.http-rp/opt-in/xhr.https-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/top.meta/unset/xhr.https-expected.txt: Added.
* Source/WebCore/loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::willSendRequestInternal):

Canonical link: https://commits.webkit.org/253520@main